--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: "3.8"
-
 services:
   n8n:
-    image: n8nio/n8n:latest-alpine
+    image: n8nio/n8n:latest
     container_name: n8n-bootcamp
     restart: unless-stopped
     ports:
